# cover-float

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  config.svh  pyproject.toml
.github/workflows/: pre-commit.yml
coverage/: coverfloat.sv  coverfloat_coverage.sv  coverfloat_interface.sv  coverfloat_pkg.sv  macros.svh
coverage/covergroups/: B1.svh  B10.svh  B11.svh  B12.svh  B14.svh  B15.svh  B16.svh  B19.svh  B2.svh  B21.svh  B22.svh  B23.svh  B24.svh  B28.svh  B3.svh  B4.svh  B5.svh  B9.svh
coverage/covergroups/bins_templates/: F128_basic_types_bins.svh  F16_basic_types_bins.svh  FP_result_op_bins.svh  FP_src1_op_bins.svh  FP_src2_op_bins.svh  FP_src3_op_bins.svh  arithmetic_op_bins.svh  conversion_op_bins.svh  float_precision_bins.svh  rounding_modes_bins.svh
coverage/covergroups/deprecated/: B9.svh
docs/: B11.adoc  B12.adoc  B13.adoc  B14.adoc  B15.adoc  B19.adoc  B2.adoc  B20.adoc  B21.adoc  B25.adoc  B26.adoc  B27.adoc  B29.adoc  B3.adoc  B6.adoc  B7.adoc  B8.adoc  B9.adoc
sim/: run.do
src/c/: coverfloat.c  coverfloat.cpp  coverfloat.h  coverfloat.hpp  main.cpp  reference.cpp  unmodified_reference.cpp
src/cover_float/: _reference.pyi  cli.py
src/cover_float/common/: constants.py  log.py  util.py
src/cover_float/reference/: __init__.py  impl.py
src/cover_float/scripts/: __init__.py  parse_testvectors.py  postprocess.py
src/cover_float/testgen/: B1.py  B10.py  B11.py  B12.py  B13.py  B14.py  B15.py  B19.py  B2 adjust desired result.py  B2 adjust operand.py  B2 original.py  B2 python divsion.py  B2 python operations.py  B2.py  B20.py  B21.py  B25.py  B26.py  B27.py  B29.py  B3.py  B4.py  B6.py  B7.py  B8.py  B9.py  __init__.py  model.py
src/submodules/: CMakeLists.txt
src/submodules/config_fix/: config.h
tests/covervectors/: test.txt
tests/testvectors/: test.txt
