[project]
name = "cover-float"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Corey Hickson", email = "chickson@hmc.edu" },
    { name = "Ryan Wolk", email = "rwolk@hmc.edu" },
    { name = "Lamarr Olive", email = "lolive@g.hmc.edu" },
    { name = "Sisi Wang", email = "siswang@g.hmc.edu" },
    { name = "Angela Zheng", email = "angzheng@g.hmc.edu" },
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cover-float-reference = "cover_float.cli:main"
cover-float-testgen = "cover_float.cli:testgen"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
    "pyright==1.1.408",
    "ruff==0.15.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "F",   # various basic rules (pyflakes)
  "E",   # errors (pycodestyle)
  "W",   # warnings (pycodestyle)
  "I",   # Import related rules (isort)
  "UP",  # Upgraded version available in newer Python
  "B",   # bugbear rules
  "A",   # shadow builtins
  "EXE", # Executable file shebangs
  "ANN", # type annotation rules
  "RUF", # Ruff specific rules
  "PTH", # Pathlib usage
  "SIM", # Simplifications
]

##### PYRIGHT CONFIG #####
[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.*",
  ".venv",
]
typeCheckingMode = "strict"
